# Overmind

./: .gitignore  Makefile  README.md  coverage.xml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  db.py  desktop_backend.py  deterministic_policy.py  docker_runner.py  main.py  mcp_local.py  memory.py  model_driven_policy.py  model_gateway.py  orchestrator.py  policy.py  repository.py  schemas.py  shell_runner.py  supervisor.py  tool_gateway.py  validator.py
app/static/: style.css
app/templates/: agents.html  base.html  index.html  run_detail.html  runs.html  settings.html
docs/: agent-evaluation-scorecard.md
electron/: main.js
packaging/: deb-after-install.sh
tests/: conftest.py  test_db_repository_edges.py  test_desktop_backend.py  test_deterministic_policy_fallback_unit.py  test_deterministic_policy_next_action_unit.py  test_docker_runner_unit.py  test_integration_docker.py  test_iterative_workflow.py  test_main_coverage.py  test_mcp_local_integration.py  test_mcp_local_unit.py  test_memory.py  test_model_gateway_supervisor_unit.py  test_model_gateway_unit.py  test_orchestrator.py  test_orchestrator_unit.py  test_policy_injection_unit.py  test_policy_unit.py  test_registry.py  test_replay.py  test_settings_ui.py  test_shell_runner_unit.py  test_supervisor_unit.py  test_tool_gateway.py  test_tool_gateway_unit.py  test_ui.py
tools/: agent_eval_rubric.json  build_backend.py  run_build_backend.js
