[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overmind"
version = "0.0.10"
description = "Overmind agent control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "fastmcp>=3.0.1",
  "uvicorn>=0.35.0",
  "jinja2>=3.1.6",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=5.0.0",
  "httpx>=0.28.1",
  "pyinstaller>=6.15.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
